--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "create-admin": "node scripts/create-super-admin.js"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.3.1",
@@ -16,11 +17,18 @@
     "@nuxt/image": "^1.10.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.6",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "eslint": "^9.26.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.2",
     "nuxt": "^3.17.2",
-    "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10"
   }
 }
