--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "@nuxt/image": "^1.10.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.6",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "dotenv": "^16.5.0",
     "eslint": "^9.26.0",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.2",
+    "mongoose": "^8.16.0",
     "nuxt": "^3.17.2",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.53.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.10"
   }
 }
